# robonomous

./: .gitignore  README.md  botsort_clipVitb16_tracker.py  botsort_tracker.py  config.yaml  data_cleaning.py  evaluation_mot17.py  predictions.txt  predictions_cleaned.txt  pyproject.toml  requirements.txt  yolo_frames_to_video.py
configs/: config.yaml
configs_loader/: config_loader.py
demos/: robotics_demo.py
evaluation/: evaluation_mot17.py  hota_evaluation.py
predictions/: predictions.txt
src/: __init__.py
src/trackers/: botsort_clipVitH14_tracker.py  botsort_tracker.py
utils/: __init__.py  yolo_frames_to_video.py
